Initial customization work to allow the Edge theme to act more like a blog
I like the homepage layout of the Edge theme and organising the "portfolio" side
of things as posts, it'd be nice to be able to have a more traditional blog as
part of the theme though and this introduces some basic changes and config for
that (as well as stripping out some things I don't need)

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -7,5 +7,5 @@
 @import "blog/feed.css";
 @import "blog/post.css";
 @import "blog/article.css";
-@import "blog/related.css";
+@import "blog/snippet.css";
 @import "misc/pswp.css";
