--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -31,7 +31,7 @@
                 <time datetime="{{date format="YYYY-MM-DD"}}">{{date published_at format="DD MMM YYYY"}}</time>
             </span>
             <span class="post-caption-meta-item post-caption-meta-link">
-                <a href="{{url}}">View project</a>
+                <a href="{{url}}">View image</a>
             </span>
         </div>
     </figcaption>
