Tweak to the blog post snippet.

--- a/partials/snippet.hbs
+++ b/partials/snippet.hbs
@@ -9,7 +9,7 @@
 
         {{#if excerpt}}
           <div class="gh-content">
-            {{excerpt characters="140"}}… <a href="{{url}}">Read More</a>
+            {{excerpt characters="140"}} • <a href="{{url}}">Read More</a>
           </div>
         {{/if}}
       </div>
